Feat: Added floating whatsapp icon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       media="all"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
     <!-- LOCAL -->
     <link rel="stylesheet" href="style/style.css" />
     <!-- <link rel="stylesheet" href="style/bootstrap.min.css"> -->
@@ -58,6 +61,9 @@
       });
     </script>
     <div class="overflow-wrap">
+      <a href="https://wa.me/2348105921590" class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+      </a>
       <!-- HOME -->
       <div class="modal-wrap flex">
         <div class="mask"></div>
