--- a/index.html
+++ b/index.html
@@ -667,8 +667,13 @@
       <img src="img/blog-2.jpg" />
       <img src="img/blog-3.jpg" />
       <img src="img/blog-4.jpg" />
-      <!-- <img src="img/slides/pgoldhome-0.jpg" />
-      <img src="img/slides/pgoldhome-1.jpg" />
+      <img src="img/slides/rsglobal-1.jpg" />
+      <img src="img/slides/brixenmore-1.jpg" />
+      <img src="img/slides/brixenmore_app-1.jpg" />
+      <img src="img/slides/mybetwealth-1.jpg" />
+      <img src="img/slides/owanate-1.jpg" />
+      <img src="img/slides/gnome_movies-1.jpg" />
+      <!-- <img src="img/slides/pgoldhome-1.jpg" />
       <img src="img/slides/pgoldhome-2.jpg" />
       <img src="img/slides/pgoldhome-3.jpg" />
       <img src="img/slides/pgoldapp-0.jpg" />
