Feat: updated form spree

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 class="avatar-sm rounded-circle"
                 alt="..."
                 src="img/me.jpg"
-                style="height: 250px; border-radius: 50%"
+                style="height: 250px; border-radius: 10% 25% 10% 25%;"
               />
             </div>
             Welcome!
@@ -223,7 +223,7 @@
               <img
                 src="img/me.jpg"
                 class="me"
-                style="border-radius: 50% !important"
+                style="border-radius: 10% 25% 10% 25%!important"
               />
               <div class="label bold">Meet Abdulfattah!</div>
               <div style="text-align: justify">
@@ -589,7 +589,7 @@
             data-animation="pop-in"
             data-delay=".5s"
             id="contact-form"
-            action="https://formspree.io/f/mbjwjbyk"
+            action="https://formspree.io/f/mjvlgeza"
             method="POST"
           >
             <input placeholder="Name" type="text" name="name" required />
