--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 class="avatar-sm rounded-circle"
                 alt="..."
                 src="img/me.jpg"
-                style="height: 250px; border-radius: 10% 25% 10% 25%;"
+                style="height: 250px; border-radius: 9999px 9999px 9999px 9999px"
               />
             </div>
             Welcome!
@@ -223,7 +223,7 @@
               <img
                 src="img/me.jpg"
                 class="me"
-                style="border-radius: 10% 25% 10% 25%!important"
+                style="border-radius: 9999px 9999px 9999px 9999px !important"
               />
               <div class="label bold">Meet Abdulfattah!</div>
               <div style="text-align: justify">
@@ -247,12 +247,16 @@
                 Let's make something special.
               </div>
             </div>
-
             <div
               class="flex flex-50-gt-sm waypoint bars-wrap"
               data-animation="slide-in-right"
             >
-              <div class="bar flex">
+              <div class="tech-logo">
+                <div class="logo-group">
+                  <img src="./img/tools/javascript.png" alt="" />
+                </div>
+              </div>
+              <!-- <div class="bar flex">
                 <div class="bar fill" style="width: 75%">
                   <div class="tag bold flex">Javascript</div>
                 </div>
@@ -339,7 +343,7 @@
                   <div class="tag bold flex">Agile (Jira)</div>
                 </div>
                 <span>75%</span>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
