--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Abdulfattah Ishaq | Personal Site Of Developer Abdulfattah Ishaq
+      Abdulfattah Ishaq | Portfolio Site
     </title>
     <meta
       name="viewport"
@@ -26,7 +26,6 @@
     />
     <!-- LOCAL -->
     <link rel="stylesheet" href="style/style.css" />
-    <!-- <link rel="stylesheet" href="style/bootstrap.min.css"> -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <!-- HOSTED -->
@@ -698,3 +697,5 @@
 </html>
 
 <script src="scripts/canvas.js"></script>
+
+
